Fix notebook math notation rendering in MMD_simple

--- a/examples/unsupervised/MMD_simple.ipynb
+++ b/examples/unsupervised/MMD_simple.ipynb
@@ -51,17 +51,18 @@
     "\n",
     "The first one is defined as follows:\n",
     "\n",
-    "##### <center> ${X \\sim \\mathcal{N_x} \\; (\\mu_{x},\\textstyle\\sum_{\\ x})}\n",
-    "\n",
-    "\\; with \\; \\mu_{x} = \\begin{bmatrix}\n",
+    "##### <center> $ X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
+    "\\; \\mu_{x} = \\begin{bmatrix}\n",
     "1 \\\\\n",
     "1\n",
     "\\end{bmatrix}\n",
-    "\n",
-    "; \\textstyle\\sum_{\\ x} = \\begin{bmatrix}\n",
+    "\\land\n",
+    "\\textstyle\\sum_{\\ x}\n",
+    "= \\begin{bmatrix}\n",
     "2 & 0 \\\\\n",
     "0 & 2\n",
-    "\\end{bmatrix}$"
+    "\\end{bmatrix}\n",
+    "$"
    ],
    "metadata": {
     "collapsed": false,
@@ -101,17 +102,18 @@
    "source": [
     "While the second is defined as follows:\n",
     "\n",
-    "##### <center> ${Y \\sim \\mathcal{N_y} \\; (\\mu_{y},{\\textstyle\\sum_{\\ y})}\n",
-    "\n",
-    "\\; with \\; \\mu_{y} = \\begin{bmatrix}\n",
+    "##### <center> $ Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
+    "\\; \\mu_{y} = \\begin{bmatrix}\n",
     "0 \\\\\n",
     "0\n",
     "\\end{bmatrix}\n",
-    "\n",
-    "; {\\textstyle\\sum_{\\ y} = \\begin{bmatrix}\n",
+    "\\land\n",
+    "\\textstyle\\sum_{\\ y}\n",
+    "= \\begin{bmatrix}\n",
     "2 & 1 \\\\\n",
     "1 & 2\n",
-    "\\end{bmatrix}$"
+    "\\end{bmatrix}\n",
+    "$"
    ],
    "metadata": {
     "collapsed": false,
