Remove extra space around $ in MMD_simple

--- a/examples/unsupervised/MMD_simple.ipynb
+++ b/examples/unsupervised/MMD_simple.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "The first one is defined as follows:\n",
     "\n",
-    "##### <center> $ X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
+    "##### <center> $X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
     "\\; \\mu_{x} = \\begin{bmatrix}\n",
     "1 \\\\\n",
     "1\n",
@@ -61,8 +61,7 @@
     "= \\begin{bmatrix}\n",
     "2 & 0 \\\\\n",
     "0 & 2\n",
-    "\\end{bmatrix}\n",
-    "$"
+    "\\end{bmatrix}$"
    ],
    "metadata": {
     "collapsed": false,
@@ -102,7 +101,7 @@
    "source": [
     "While the second is defined as follows:\n",
     "\n",
-    "##### <center> $ Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
+    "##### <center> $Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
     "\\; \\mu_{y} = \\begin{bmatrix}\n",
     "0 \\\\\n",
     "0\n",
@@ -112,8 +111,7 @@
     "= \\begin{bmatrix}\n",
     "2 & 1 \\\\\n",
     "1 & 2\n",
-    "\\end{bmatrix}\n",
-    "$"
+    "\\end{bmatrix}$"
    ],
    "metadata": {
     "collapsed": false,
