Remove centers in MMD_simple

--- a/examples/unsupervised/MMD_simple.ipynb
+++ b/examples/unsupervised/MMD_simple.ipynb
@@ -51,7 +51,8 @@
     "\n",
     "The first one is defined as follows:\n",
     "\n",
-    "##### <center> $X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
+    "$$\n",
+    "X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
     "\\; \\mu_{x} = \\begin{bmatrix}\n",
     "1 \\\\\n",
     "1\n",
@@ -61,7 +62,8 @@
     "= \\begin{bmatrix}\n",
     "2 & 0 \\\\\n",
     "0 & 2\n",
-    "\\end{bmatrix}$"
+    "\\end{bmatrix}\n",
+    "$$"
    ],
    "metadata": {
     "collapsed": false,
@@ -101,7 +103,8 @@
    "source": [
     "While the second is defined as follows:\n",
     "\n",
-    "##### <center> $Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
+    "$$\n",
+    "Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
     "\\; \\mu_{y} = \\begin{bmatrix}\n",
     "0 \\\\\n",
     "0\n",
@@ -111,7 +114,8 @@
     "= \\begin{bmatrix}\n",
     "2 & 1 \\\\\n",
     "1 & 2\n",
-    "\\end{bmatrix}$"
+    "\\end{bmatrix}\n",
+    "$$"
    ],
    "metadata": {
     "collapsed": false,
@@ -182,8 +186,10 @@
    "source": [
     "The Hypothesis Test can be defined as follows:\n",
     "\n",
-    "##### <center> $H_{0} : N_{x} = N_{y}$\n",
-    "##### <center> $H_{1} : N_{x} \\neq N_{y}$\n",
+    "$$\n",
+    "H_{0} : N_{x} = N_{y}\\\\\n",
+    "H_{1} : N_{x} \\neq N_{y}\n",
+    "$$\n",
     "\n",
     "with a significance level of $\\alpha = 0.01$."
    ],
