Add missing \textstyle in MMD_simple

--- a/examples/unsupervised/MMD_simple.ipynb
+++ b/examples/unsupervised/MMD_simple.ipynb
@@ -52,7 +52,7 @@
     "The first one is defined as follows:\n",
     "\n",
     "$$\n",
-    "X \\sim \\mathcal{N_x}(\\mu_{x},\\sum_{\\ x}):\n",
+    "X \\sim \\mathcal{N_x}(\\mu_{x},\\textstyle\\sum_{\\ x}):\n",
     "\\; \\mu_{x} = \\begin{bmatrix}\n",
     "1 \\\\\n",
     "1\n",
@@ -104,7 +104,7 @@
     "While the second is defined as follows:\n",
     "\n",
     "$$\n",
-    "Y \\sim \\mathcal{N_y}(\\mu_{y},\\sum_{\\ y}):\n",
+    "Y \\sim \\mathcal{N_y}(\\mu_{y},\\textstyle\\sum_{\\ y}):\n",
     "\\; \\mu_{y} = \\begin{bmatrix}\n",
     "0 \\\\\n",
     "0\n",
