Add MMD_simple notebook to documentation examples

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -6,14 +6,13 @@
   year={2016}
 }
 
-
-@article{gretton2012kernel,
-  title={A kernel two-sample test},
-  author={Gretton, Arthur and Borgwardt, Karsten M and Rasch, Malte J and Sch{\"o}lkopf, Bernhard and Smola, Alexander},
-  journal={The Journal of Machine Learning Research},
-  volume={13},
-  number={1},
-  pages={723--773},
-  year={2012},
-  publisher={JMLR. org}
+@article{JMLR:v13:gretton12a,
+  author  = {Arthur Gretton and Karsten M. Borgwardt and Malte J. Rasch and Bernhard Sch{{\"o}}lkopf and Alexander Smola},
+  title   = {A Kernel Two-Sample Test},
+  journal = {Journal of Machine Learning Research},
+  year    = {2012},
+  volume  = {13},
+  number  = {25},
+  pages   = {723--773},
+  url     = {http://jmlr.org/papers/v13/gretton12a.html}
 }
