Fix documentations concepts

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -16,3 +16,43 @@
   pages   = {723--773},
   url     = {http://jmlr.org/papers/v13/gretton12a.html}
 }
+
+@article{moreno2012unifying,
+  title={A unifying view on dataset shift in classification},
+  author={Moreno-Torres, Jose G and Raeder, Troy and Alaiz-Rodr{\'\i}guez, Roc{\'\i}o and Chawla, Nitesh V and Herrera, Francisco},
+  journal={Pattern recognition},
+  volume={45},
+  number={1},
+  pages={521--530},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{gama2014survey,
+  title={A survey on concept drift adaptation},
+  author={Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\.e} and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
+  journal={ACM computing surveys (CSUR)},
+  volume={46},
+  number={4},
+  pages={1--37},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
+@article{rabanser2019failing,
+  title={Failing loudly: An empirical study of methods for detecting dataset shift},
+  author={Rabanser, Stephan and G{\"u}nnemann, Stephan and Lipton, Zachary},
+  journal={Advances in Neural Information Processing Systems},
+  volume={32},
+  year={2019}
+}
+
+@article{ramirez2017survey,
+  title={A survey on data preprocessing for data stream mining: Current status and future directions},
+  author={Ram{\'\i}rez-Gallego, Sergio and Krawczyk, Bartosz and Garc{\'\i}a, Salvador and Wo{\'z}niak, Micha{\l} and Herrera, Francisco},
+  journal={Neurocomputing},
+  volume={239},
+  pages={39--57},
+  year={2017},
+  publisher={Elsevier}
+}
