Add DDM_NormalMode notebook to documentation

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -56,3 +56,20 @@
   year={2017},
   publisher={Elsevier}
 }
+
+@inproceedings{street2001streaming,
+  title={A streaming ensemble algorithm (SEA) for large-scale classification},
+  author={Street, W Nick and Kim, YongSeog},
+  booktitle={Proceedings of the seventh ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={377--382},
+  year={2001}
+}
+
+@inproceedings{gama2004learning,
+  title={Learning with drift detection},
+  author={Gama, Joao and Medas, Pedro and Castillo, Gladys and Rodrigues, Pedro},
+  booktitle={Brazilian symposium on artificial intelligence},
+  pages={286--295},
+  year={2004},
+  organization={Springer}
+}
