Add DDM_simple notebook to documentation

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -73,3 +73,10 @@
   year={2004},
   organization={Springer}
 }
+
+@techreport{harries1999splice,
+  title={Splice-2 comparative evaluation: Electricity pricing},
+  author={Harries, Michael},
+  year={1999},
+  institution={The University of South Wales}
+}
