Add verbose flag to MMD_simple.ipynb

--- a/docs/source/examples/data_drift/MMD_simple.ipynb
+++ b/docs/source/examples/data_drift/MMD_simple.ipynb
@@ -217,7 +217,7 @@
    "execution_count": 22,
    "outputs": [],
    "source": [
-    "detector = MMD(callbacks=[PermutationTestOnBatchData(num_permutations=1000, random_state=31, num_jobs=-1, name=\"permutation_test\")])\n",
+    "detector = MMD(callbacks=[PermutationTestOnBatchData(num_permutations=1000, random_state=31, num_jobs=-1, name=\"permutation_test\", verbose=True)])\n",
     "detector.fit(X_ref)\n",
     "mmd, callbacks_log = detector.compare(X=X_test)\n",
     "p_value = callbacks_log[\"permutation_test\"][\"p_value\"]"
