New pipeline examples location

--- a/docs/source/examples/data_drift/multivariate_pipeline.ipynb
+++ b/docs/source/examples/data_drift/multivariate_pipeline.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -28,10 +25,7 @@
     "## Unsupervised - Pipeline with multivariate detector"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -40,10 +34,7 @@
     "Unsupervised multivariate detectors can also be used in a scikit-learn Pipeline object. The following example shows the use of MMD as a detector for the breast cancer dataset provided by scikit-learn."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -56,10 +47,7 @@
     "X, y = load_breast_cancer(return_X_y=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -68,10 +56,7 @@
     "Since this is a small data set and the only objective is to show the integration of a multivariate detector with the Pipeline, the data is simply split in half."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -83,10 +68,7 @@
     "X_train, y_train, X_test, y_test = X[:idx_split], y[:idx_split], X[idx_split:], y[idx_split:]"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -95,10 +77,7 @@
     "The significance level will be $\\alpha = 0.01$."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -109,10 +88,7 @@
     "alpha = 0.01"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -121,10 +97,7 @@
     "Next, the pipeline is defined, where in addition to using the detector, the data is standardized and Logistic Regression is used as the model. Moreover, the pipeline is fitted, which means that the reference data for the detector is stored and the model is trained with that same data."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -149,10 +122,7 @@
     "pipeline.fit(X=X_train, y=y_train)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -161,10 +131,7 @@
     "In addition to obtaining the predictions for the test data by calling the predict method, the detector compares the reference data with test data to determine if drift is occurring."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -192,10 +159,7 @@
     "print(f\"Accuracy: {round(accuracy_score(y_test, y_pred), 4)}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -204,10 +168,7 @@
     "As the above results show, no data drift was detected. Therefore, we can simulate data drift by applying some noise to the test data, as shown below:"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -236,10 +197,7 @@
     "print(f\"Accuracy: {round(accuracy_score(y_test, y_pred), 4)}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -248,10 +206,7 @@
     "Data drift has been detected and the model's performance has been affected by lowering the accuracy value."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -261,10 +216,7 @@
     "One possible way to reduce the time in each call to the predict method is to take a sample of the data that is going to be used as reference. This has the disadvantage that it will not be possible to use the detector with the fit from the Pipeline object, so it has to be fitted outside the Pipeline and then added, as shown below:"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -287,10 +239,7 @@
     "pipeline.fit(X=X_train, y=y_train)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -299,10 +248,7 @@
     "The detector is fitted with a sample of the training data."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -327,10 +273,7 @@
     "detector.fit(X=X_train_samples)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -339,10 +282,7 @@
     "Subsequently, the detector is added as the first step in the pipeline."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -364,10 +304,7 @@
     "pipeline"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -376,10 +313,7 @@
     "Finally, the predict method of the pipeline is used as normal."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -407,10 +341,7 @@
     "print(f\"Accuracy: {round(accuracy_score(y_test, y_pred), 4)}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
