--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -80,3 +80,18 @@
   year={1999},
   institution={The University of South Wales}
 }
+
+@inproceedings{rifai2011contractive,
+  title={Contractive auto-encoders: Explicit invariance during feature extraction},
+  author={Rifai, Salah and Vincent, Pascal and Muller, Xavier and Glorot, Xavier and Bengio, Yoshua},
+  booktitle={Proceedings of the 28th international conference on international conference on machine learning},
+  pages={833--840},
+  year={2011}
+}
+
+@article{kingma2014adam,
+  title={Adam: A method for stochastic optimization},
+  author={Kingma, Diederik P and Ba, Jimmy},
+  journal={arXiv preprint arXiv:1412.6980},
+  year={2014}
+}
