--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -95,3 +95,14 @@
   journal={arXiv preprint arXiv:1412.6980},
   year={2014}
 }
+
+@article{massey1951kolmogorov,
+  title={The Kolmogorov-Smirnov test for goodness of fit},
+  author={Massey Jr, Frank J},
+  journal={Journal of the American statistical Association},
+  volume={46},
+  number={253},
+  pages={68--78},
+  year={1951},
+  publisher={Taylor \& Francis}
+}
