Fix examples names and headings

--- a/docs/source/examples/concept_drift/DDM_advance.ipynb
+++ b/docs/source/examples/concept_drift/DDM_advance.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Concept drift"
+    "# Concept drift - SEA dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -30,8 +30,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Advanced example - SEA Dataset\n",
-    "\n",
     "Example of how to use the supervised method DDM {cite:p}`gama2004learning` with a data stream blocks (concepts) from the SEA {cite:p}`street2001streaming` generator."
    ],
    "metadata": {
