--- a/docs/source/examples/concept_drift/DDM_simple.ipynb
+++ b/docs/source/examples/concept_drift/DDM_simple.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Concept drift - Simple\n",
-    "\n",
-    "Example of how to use the concept drift detector DDM {cite:p}`gama2004learning`."
+    "# Concept drift - Elec2 dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -31,7 +29,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "In order to demonstrate a simple use case, we use some features of the normalized version of Elec2 {cite:p}`harries1999splice`. Unlike synthetic datasets, in real datasets is not possible to know for sure if and when drift occurs."
+    "Example of how to use the concept drift detector DDM {cite:p}`gama2004learning`. In order to demonstrate a simple use case, we use some features of the normalized version of Elec2 {cite:p}`harries1999splice`. Unlike synthetic datasets, in real datasets is not possible to know for sure if and when drift occurs."
    ],
    "metadata": {
     "collapsed": false
