--- a/docs/source/examples/data_drift/MMD_advance.ipynb
+++ b/docs/source/examples/data_drift/MMD_advance.ipynb
@@ -27,16 +27,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Data drift detection"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Advanced example - MNIST Dataset"
+    "# Data drift - MNIST dataset"
    ],
    "metadata": {
     "collapsed": false
