--- a/docs/source/examples/data_drift/univariate_detector.ipynb
+++ b/docs/source/examples/data_drift/univariate_detector.ipynb
@@ -19,7 +19,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Data drift"
+    "# Data drift - Univariate detector"
    ],
    "metadata": {
     "collapsed": false
@@ -28,8 +28,6 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Univariate detector\n",
-    "\n",
     "The following example shows the use of Kolmogorov-Smirnov test {cite:p}`massey1951kolmogorov` univariate detector with a synthetic dataset composed by 3 informative features and 2 non-informative/useless features for the model."
    ],
    "metadata": {
