--- a/docs/source/examples/data_drift/MMD_simple.ipynb
+++ b/docs/source/examples/data_drift/MMD_simple.ipynb
@@ -20,7 +20,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Data drift - Two bivariate normal distributions"
+    "# Data drift - Two bivariate normal distributions"
    ],
    "metadata": {
     "collapsed": false
