Fix permuted data indexes in permutation_test function

--- a/docs/source/examples/data_drift/multivariate_detector.ipynb
+++ b/docs/source/examples/data_drift/multivariate_detector.ipynb
@@ -108,7 +108,7 @@
     "detector = MMD(\n",
     "    callbacks=[\n",
     "        PermutationTestOnBatchData(\n",
-    "            num_permutations=100,\n",
+    "            num_permutations=1000,\n",
     "            random_state=31,\n",
     "            num_jobs=-1,\n",
     "            name=\"permutation_test\",\n",
@@ -175,23 +175,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 456.69it/s]"
+      "100%|██████████| 1000/1000 [00:01<00:00, 536.02it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value: 0.0\n",
-      "Data drift detected\n",
+      "p-value: 0.343\n",
+      "No data drift detected\n",
       "Accuracy: 0.9719\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -220,13 +213,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 437.38it/s]"
+      "100%|██████████| 1000/1000 [00:01<00:00, 620.44it/s]\n"
      ]
     },
     {
@@ -235,14 +228,7 @@
      "text": [
       "p-value: 0.0\n",
       "Data drift detected\n",
-      "Accuracy: 0.9088\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "Accuracy: 0.9263\n"
      ]
     }
    ],
