Add streaming callback mSPRT

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -106,3 +106,14 @@
   year={1951},
   publisher={Taylor \& Francis}
 }
+
+@article{johari2022always,
+  title={Always valid inference: Continuous monitoring of a/b tests},
+  author={Johari, Ramesh and Koomen, Pete and Pekelis, Leonid and Walsh, David},
+  journal={Operations Research},
+  volume={70},
+  number={3},
+  pages={1806--1821},
+  year={2022},
+  publisher={INFORMS}
+}
